name:               s-components
version:            0.0.0.0
synopsis:           React components collection for react-flux.
description:        Please see README.md
homepage:           http://github.com/siphilia/s-components#readme
license:            BSD3
license-file:       LICENSE
author:             Siphilia
maintainer:         Siphilia <siphilia.rn@gmail.com>
copyright:          (c) 2016 Siphilia.
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
-- extra-source-files:

library
  hs-source-dirs:   src
  exposed-modules:  React.Flux.Component.SComponent
                  , React.Flux.Component.SComponent.Dropdown
                  , React.Flux.Component.SComponent.Internal.Import
                  , React.Flux.Component.SComponent.Internal.Util
                  , React.Flux.Component.SComponent.Types
  build-depends:    base        >= 4.7 && < 5
                  , deepseq
                  , lens        == 4.13.*
                  , react-flux  >= 1.0 && < 2.0
                  , text        >= 1.0
  default-language: Haskell2010

executable s-components-demo
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , lens          == 4.13.*
                  , react-flux    >= 1.0 && < 2.0
                  , s-components
                  , shakespeare   >= 2.0
                  , text          >= 1.0
  default-language: Haskell2010

test-suite s-components-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base
                  , s-components
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/siphilia/s-components
